--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-validator": "^6.14.0",
+    "googleapis": "^112.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4"
   },
