--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "express-validator": "^6.14.0",
     "googleapis": "^112.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.4"
+    "mongoose": "^6.3.4",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
