--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "college-quora a platform to make connections to collegemates",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx nodemon index.js"
   },
   "repository": {
     "type": "git",
